--- a/src/components/Search/styles.scss
+++ b/src/components/Search/styles.scss
@@ -4,7 +4,10 @@
   padding: 8px;
   font-size: 14px;
   border-radius: 20px;
-  border: 1px solid $color-dark;
+  border: 2px solid $color-dark;
   font-family: inherit;
-  margin-bottom: 8px;
+}
+
+.loading-data-indicator {
+  margin: 16px 0px;
 }
