Extract helper function and update reducers for better readability

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,3 +1,5 @@
-$color-light: #cbcbcb;
+$color-light: #909090;
+$color-lighter: #cbcbcb;
+$color-lightest: #e0e0e0;
 $color-dark: #7b7b7b;
 $color-bg: #ffffff;
