--- a/src/components/SuggestedCityList/styles.scss
+++ b/src/components/SuggestedCityList/styles.scss
@@ -16,6 +16,6 @@
   padding: 8px;
   background-color: $color-bg;
   &:hover {
-    background-color: $color-light;
+    background-color: $color-lighter;
   }
 }
