--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -13,6 +13,7 @@
   justify-content: space-around;
   margin-right: $card-spacing;
   margin-bottom: $card-spacing;
+  cursor: pointer;
   &:hover {
     box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, 0.2);
   }
